--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,5 +1,6 @@
 script(src="https://res.cloudinary.com/dhci54mir/raw/upload/v1473173204/jquery.min.js")
 script(src="https://res.cloudinary.com/dhci54mir/raw/upload/v1473173214/bootstrap.min.css")
+link(rel='stylesheet', href='https://res.cloudinary.com/dhci54mir/raw/upload/v1473173214/bootstrap.min.css')
 script(src="https://res.cloudinary.com/dhci54mir/raw/upload/v1473173206/vue.min.js")
 script(src="https://res.cloudinary.com/dhci54mir/raw/upload/v1473173200/vue-router.min.js")
 script(src="https://res.cloudinary.com/dhci54mir/raw/upload/v1473173199/vue-resource.min.js")
